# demo_hello_world

./: CMakeLists.txt  README.md  demo_hello_world.camkes
axivion/: build.sh  project_config.json  set_axivion_config  set_common_paths  start_analysis.sh
components/hello_world_app/: hello_world_app.camkes  message.h
components/hello_world_app/src/: main.c  main.cpp
components/hello_world_sender/: hello_world_sender.camkes
components/hello_world_sender/src/: main.c
connector/: trentos_thread-to-template.c  trentos_thread-to-template.h
etl/: etl_profile.h
